<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Save MyPics</string>
  <string name="savemypics">Save My Pics</string>

  <!-- snapfish login -->
  <string name="snapfish">Snapfish</string>
  <string name="login_progress_signing_in">Signing in&#8230;</string>
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="action_snapfish_login">Sign in</string>
  <string name="error_field_required">This field is required</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="title_login_snapfish">Sign in to Snapfish</string>
  <string name="login_in_progress">Signing in&#8230;</string>

  <!-- flickr login -->
  <string name="flickr">Flickr</string>
  <string name="action_flickr_login">Continue</string>
  <string name="title_login_flickr">Sign in to Flickr</string>
  <string name="desc_login_flickr">Continue to the Flickr sign in page, where you can authorize Save MyPics to upload photos to your account.</string>
  <string name="flickr_waiting_for_request">Connecting to flickr&#8230;</string>
  <string name="flickr_waiting_for_access">Verifying authorization&#8230;</string>

  <!-- account_info -->
  <string name="account_disabled">Account disabled</string>
  <string name="recently_saved">Recently uploaded</string>
  <string name="recently_downloaded">Recently downloaded</string>
  <string name="recently_pending">Queued for upload</string>
  <string name="using_wifi_network">Images are transferred only when wifi is available.</string>
  <string name="using_any_network">Images may be transferred using your mobile data plan.</string>
  <string name="upload_enabled">Uploads are enabled,</string>
  <string name="upload_disabled">Uploads are disabled,</string>
  <string name="download_disabled">downloads are disabled.</string>
  <string name="download_enabled">up to 50 images in your account will be downloaded.</string>

  <!-- preferences -->
  <string name="title_snapfish_settings">Snapfish Settings</string>
  <string name="title_flickr_settings">Flickr Settings</string>
  <string name="change_settings">Change Settings</string>
  <string name="pref_account_enabled_title">Enable Account</string>
  <string name="pref_account_enabled_summary">Use this account to save pictures.</string>
  <string name="pref_only_wifi_title">Only use wifi</string>
  <string name="pref_only_wifi_summary">This usually minimizes your data plan usage.</string>
  <string name="pref_upload_enabled_title">Enable uploads</string>
  <string name="pref_upload_enabled_summary">Pictures will be automatically uploaded to your account.</string>
  <string name="pref_upload_all_title">Upload pre-existing pictures</string>
  <string name="pref_upload_all_summary">Upload pictures that existed before this account was added.</string>
  <string name="pref_upload_existing_title">Upload existing pictures</string>
  <string name="pref_upload_existing_summary">Also upload all the pictures currently on this device.</string>
  <string name="pref_debug_enabled_title">Show debug data</string>
  <string name="pref_debug_enabled_summary">Show additional internal information that may be useful for debugging problems.</string>
  <string name="pref_download_enabled_title">Enable downloads</string>
  <string name="pref_download_enabled_summary">Download up to 50 images from your account for offline use. (Excludes images uploaded from this device.)</string>
  <string name="pref_download_shared_title">Include shared albums</string>
  <string name="pref_download_shared_summary">Also download pictures from albums shared with me.</string>

  <string name="action_remove_account">Remove account</string>
  <string name="remove_account_dialog_summary">Any uploaded pictures will still remain in your online account. Any downloaded pictures will also remain on your device. Locally saved account information will be removed.\n\nProceed to remove account?</string>

  <!-- wifi dialog -->
  <string name="no_wifi_title">Wifi Unavailable</string>
  <string name="wifi_settings">Open Wifi Settings</string>
  <string name="no_wifi_message">
    This operation runs only when wifi is available. Please enable wifi to continue.
  </string>

  <!-- first time help for account view -->
  <string name="add_new_account_title">Welcome</string>
  <string name="add_new_account_help">You are just a short step away from automatically saving your pictures to the cloud.\n\nPlease start by adding an account where I can save your pictures.</string>
  <string name="add_account">Add Account</string>
  <string name="signin_provider_title">Sign In</string>
  <string name="signin_provider_help">Sign in to your account on one of these services to save your pictures automatically.</string>
  <string name="signin_provider_success_title">That\'s it!</string>
  <string name="signin_provider_success_help_1">Your pictures will now be uploaded automatically in the background while minimizing data and battery usage</string>
  <string name="signin_provider_success_help_2">You can further configure how your pictures are synced from the main Save MyPics app.</string>
  <string name="ok_gotit">Okay, got it</string>

  <!-- status counter -->
  <string name="counter_saved">uploaded</string>
  <string name="counter_pending">pending</string>

  <!-- results -->
  <string name="result_no_usable_network">paused until a suitable network is available.</string>
  <string name="result_io_retry">paused because of a temporary network error, will retry later.</string>
  <string name="result_uploads_in_progress">uploads in progress.</string>
  <string name="result_downloads_in_progress">downloads in progress.</string>
  <string name="result_auth_failure">authorization failed.</string>
  <string name="result_done">Completed sync.</string>

</resources>
