<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:smp="http://schemas.android.com/apk/res/org.savemypics.android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <!-- Login progress -->
  <LinearLayout
      android:id="@+id/snapfish_login_status"
      android:visibility="gone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:gravity="center_horizontal"
      android:orientation="vertical">
    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/grid_b_6"/>
    <TextView
        android:id="@+id/snapfish_login_status_message"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/grid_b_3"
        android:text="@string/login_progress_signing_in" />
  </LinearLayout>

  <!-- Login form -->
  <ScrollView
      android:id="@+id/snapfish_login_form"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <org.savemypics.android.view.CMaximumWidthLayout
        style="@style/StandardContainer"
        android:paddingBottom="@dimen/grid"
        smp:maximumChildWidth="@dimen/grid_m_8">

      <LinearLayout
          android:orientation="vertical"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content">

        <TextView
            style="@style/BigTitle"
            android:id="@+id/snapfish_login_title"
            android:text="@string/title_login_snapfish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/login_email"
            android:layout_marginTop="@dimen/grid_b_2_3"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/prompt_email" />

        <EditText
            android:id="@+id/snapfish_login_password"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:imeActionLabel="@string/action_snapfish_login"
            android:imeActionId="@+id/snapfish_login"
            android:imeOptions="actionUnspecified" />

        <Button
            style="@style/FlatButton"
            android:id="@+id/snapfish_login_button"
            android:layout_marginTop="@dimen/grid_b_2_3"
            android:text="@string/action_snapfish_login"
            android:paddingLeft="@dimen/grid_b_2_3"
            android:paddingRight="@dimen/grid_b_2_3"
            android:layout_gravity="left" />
      </LinearLayout>
    </org.savemypics.android.view.CMaximumWidthLayout>
  </ScrollView>
</FrameLayout>
